新增密码修改  维保订单详情

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
 
         <activity
             android:name=".ui.main.MainActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,7 +43,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.maintenance.AddOrderActivity"></activity>
+        <activity android:name=".ui.maintenance.AddOrderActivity" />
+        <activity android:name=".ui.maintenance.DetailActivity" />
+        <activity android:name=".ui.mine.pwdActivity"></activity>
     </application>
 
 </manifest>
