--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="android.max_aspect" android:value="2.1" />
 
         <!-- AUTO LAYOUT -->
         <meta-data
@@ -21,7 +22,6 @@
         <meta-data
             android:name="design_height"
             android:value="1280" />
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.wb.weibao.fileprovider"
