--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation files('lib/xUtils-2.6.14.jar')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.zhihu.android:matisse:0.4.3'
 }
