--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation files('lib/xUtils-2.6.14.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.zhihu.android:matisse:0.4.3'
+    implementation files('lib/core-3.0.0.jar')
 }
