--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,27 @@ android {
         versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        xxconfig {
+            storeFile file("weibao2.jks")
+            keyAlias "product"
+            keyPassword "123456"
+            storePassword "123456"
+        }
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.xxconfig
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.xxconfig
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -40,6 +61,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation files('lib/xUtils-2.6.14.jar')
+    implementation 'com.amap.api:location:latest.integration'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.zhihu.android:matisse:0.4.3'
     implementation files('lib/core-3.0.0.jar')
