--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,12 @@
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1" />
+        <!-- 高德地图 -->
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="6443b3106159d510fb1105bec164e469" />
 
+        <service android:name="com.amap.api.location.APSService" />
         <!-- AUTO LAYOUT -->
         <meta-data
             android:name="design_width"
