--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':lib_common')
+    implementation 'com.android.support:support-v4:25.4.0'
+    implementation 'com.google.android.gms:play-services-plus:16.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -43,4 +45,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.zhihu.android:matisse:0.4.3'
     implementation files('lib/core-3.0.0.jar')
+    compile 'com.jiang.android.viewpagertransformer:transformer:1.0.1'
 }
