--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.CAMERA" />
 
-    <!-- 读写sdcard，storage等等 -->
     <application
         android:name=".common.MyApplication"
         android:allowBackup="true"
@@ -16,16 +15,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.home.FireControlActivity"></activity>
+        <activity android:name=".ui.home.MySecurityActivity" />
+        <activity android:name=".ui.home.TrainingEducationActivity" />
+
         <meta-data
             android:name="android.max_aspect"
-            android:value="2.1" />
-        <!-- 高德地图 -->
+            android:value="2.1" /> <!-- 高德地图 -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="6443b3106159d510fb1105bec164e469" />
 
-        <service android:name="com.amap.api.location.APSService" />
-        <!-- AUTO LAYOUT -->
+        <service android:name="com.amap.api.location.APSService" /> <!-- AUTO LAYOUT -->
         <meta-data
             android:name="design_width"
             android:value="720" />
