--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':lib_common')
-    implementation 'com.android.support:support-v4:25.4.0'
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation files('lib/xUtils-2.6.14.jar')
     implementation 'com.amap.api:location:latest.integration'
@@ -70,6 +68,5 @@ dependencies {
     implementation 'com.zhihu.android:matisse:0.4.3'
     implementation files('lib/core-3.0.0.jar')
     implementation 'com.jiang.android.viewpagertransformer:transformer:1.0.1'
-
-
+    implementation project(':Photopicker')
 }
