--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.FireControlActivity"></activity>
+        <activity android:name=".ui.home.ProjectListActivity"></activity>
+        <activity android:name=".ui.home.FireControlActivity" />
         <activity android:name=".ui.home.MySecurityActivity" />
         <activity android:name=".ui.home.TrainingEducationActivity" />
 
@@ -74,6 +75,7 @@
         <activity android:name=".ui.home.ChangeShiftsActivity" />
         <activity android:name=".widget.zxing.android.CaptureActivity" />
         <activity android:name=".ui.home.HandEditActivity" />
+        <activity android:name="com.lling.photopicker.PhotoPickerActivity" />
     </application>
 
 </manifest>
