--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <activity android:name=".ui.home.HandEditActivity" />
         <activity android:name="com.lling.photopicker.PhotoPickerActivity" />
         <activity android:name=".ui.record.CLActivity"/>
+        <activity android:name=".ui.record.AlarmCLActivity"/>
     </application>
 
 </manifest>
