--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <!-- 用于进行网络定位 -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 用于访问GPS定位 -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- 用于获取运营商信息，用于支持提供运营商信息相关的接口 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!-- 用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- 用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 用于获取运营商信息，用于支持提供运营商信息相关的接口 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
     <application
         android:name=".common.MyApplication"
         android:allowBackup="true"
@@ -24,7 +20,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.ProjectListActivity"></activity>
+        <activity android:name=".ui.home.SecurityInfoActivity"></activity>
+        <activity android:name=".ui.home.ProjectListActivity" />
         <activity android:name=".ui.home.FireControlActivity" />
         <activity android:name=".ui.home.MySecurityActivity" />
         <activity android:name=".ui.home.TrainingEducationActivity" />
@@ -85,8 +82,8 @@
         <activity android:name=".widget.zxing.android.CaptureActivity" />
         <activity android:name=".ui.home.HandEditActivity" />
         <activity android:name="com.lling.photopicker.PhotoPickerActivity" />
-        <activity android:name=".ui.record.CLActivity"/>
-        <activity android:name=".ui.record.AlarmCLActivity"/>
+        <activity android:name=".ui.record.CLActivity" />
+        <activity android:name=".ui.record.AlarmCLActivity" />
     </application>
 
 </manifest>
