--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 android.injected.build.model.only.versioned = 3
 android.injected.testOnly=false
+android.useDeprecatedNdk=true
