--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,8 +84,8 @@ dependencies {
     implementation 'com.jiang.android.viewpagertransformer:transformer:1.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     implementation project(':Photopicker')
-    compile 'cn.jiguang.sdk:jpush:3.1.1'
+    implementation 'cn.jiguang.sdk:jpush:3.1.1'
     // 此处以JPush 3.1.1 版本为例。
-    compile 'cn.jiguang.sdk:jcore:1.1.9'
+    implementation 'cn.jiguang.sdk:jcore:1.1.9'
 
 }
