--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,5 +87,5 @@ dependencies {
     implementation 'cn.jiguang.sdk:jpush:3.1.1'
     // 此处以JPush 3.1.1 版本为例。
     implementation 'cn.jiguang.sdk:jcore:1.1.9'
-
+    implementation 'com.contrarywind:Android-PickerView:3.2.6'
 }
