--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.HandleMaintenanceActivity"></activity>
+        <activity android:name=".ui.home.NoDataActivity"></activity>
+        <activity android:name=".ui.home.HandleMaintenanceActivity" />
         <activity android:name=".ui.home.StatisticsActivity" />
         <activity android:name=".ui.home.SecurityInfoActivity" />
         <activity android:name=".ui.home.ProjectListActivity" />
