--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.application'
 
 android {
+
+
+
     compileSdkVersion build_versions.compile_sdk
     buildToolsVersion build_versions.build_tools
     defaultConfig {
@@ -34,6 +37,7 @@ android {
             storePassword "123456"
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -68,19 +72,29 @@ android {
         enabled = true
     }
 
+    //TODO：只保留ABI为:'armeabi-v7a'的so, 'armeabi'已经不支持，'armeabi'的so通常可以直接置于'armeabi-v7a'
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a'
+        }
+    }
+
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:support-annotations:27.1.1'
     implementation project(':lib_common')
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    implementation files('lib/xUtils-2.6.14.jar')
+    implementation files('libs/xUtils-2.6.14.jar')
     implementation 'com.amap.api:location:latest.integration'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.zhihu.android:matisse:0.4.3'
-    implementation files('lib/core-3.0.0.jar')
+    implementation files('libs/core-3.0.0.jar')
     implementation 'com.jiang.android.viewpagertransformer:transformer:1.0.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     implementation project(':Photopicker')
@@ -88,4 +102,6 @@ dependencies {
     // 此处以JPush 3.1.1 版本为例。
     implementation 'cn.jiguang.sdk:jcore:1.1.9'
     implementation 'com.contrarywind:Android-PickerView:3.2.6'
+    implementation 'com.blankj:utilcode:1.20.3'
+    implementation files('libs/HikVideoPlayer.jar')
 }
