--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ org.gradle.jvmargs=-Xmx1536m
 android.injected.build.model.only.versioned = 3
 android.injected.testOnly=false
 android.useDeprecatedNdk=true
+android.enableAapt2=false
