--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.wb.weibao">
-    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,14 +17,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 用于获取运营商信息，用于支持提供运营商信息相关的接口 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <!-- 允许程序录制音频 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> <!-- 允许程序录制音频 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
-    <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <!-- 调用硬件相机权限 -->
+    <uses-permission android:name="android.permission.FLASHLIGHT" /> <!-- 调用硬件相机权限 -->
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:name=".common.MyApplication"
         android:allowBackup="true"
@@ -31,7 +30,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.NoDataActivity"></activity>
+        <activity android:name=".ui.main.SplashActivity"
+            android:theme="@style/SplashTheme"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity android:name=".ui.home.NoDataActivity" />
         <activity android:name=".ui.home.HandleMaintenanceActivity" />
         <activity android:name=".ui.home.StatisticsActivity" />
         <activity android:name=".ui.home.SecurityInfoActivity" />
@@ -103,12 +112,8 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ui.Login.LoginActivity"  >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".ui.Login.LoginActivity">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".ui.maintenance.AddOrderActivity" />
         <activity android:name=".ui.maintenance.DetailActivity" />
@@ -119,7 +124,6 @@
         <activity android:name=".ui.Login.RelationActivity" />
 
         <service android:name=".utils.update.DownloadService" />
-
 
         <activity android:name=".ui.Login.ForgetPwdActivity" />
         <activity android:name=".ui.Login.RegisterActivity" />
@@ -136,13 +140,14 @@
         <activity android:name=".ui.record.AlarmCLActivity" />
         <activity android:name=".ui.home.QrcodeActivity" />
         <activity android:name=".ui.mine.ProposalActivity" />
-        <service android:name=".common.TimeService"  />
-        <activity android:name=".ui.home.PreviewActivity"
+
+        <service android:name=".common.TimeService" />
+
+        <activity
+            android:name=".ui.home.PreviewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_preview"
-            android:windowSoftInputMode="adjustResize">
-
-    </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
     </application>
 
 </manifest>
