--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,15 +7,14 @@ bugly {
 android {
 
 
-
     compileSdkVersion build_versions.compile_sdk
     buildToolsVersion build_versions.build_tools
     defaultConfig {
         applicationId "com.wb.weibao"
         minSdkVersion build_versions.min_sdk
         targetSdkVersion build_versions.target_sdk
-        versionCode 11
-        versionName "1.1.1"
+        versionCode 12
+        versionName "1.1.2"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         jackOptions {
@@ -23,7 +22,7 @@ android {
         }
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters  'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
 
@@ -119,4 +118,5 @@ dependencies {
     implementation 'com.facebook.fresco:animated-gif:1.10.0'
     implementation project(':toast')
     implementation 'com.tencent.bugly:crashreport:2.6.6'
+    implementation 'com.androidkun:XTabLayout:1.1.4'
 }
