--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:icon="@mipmap/ic_launcher_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.home.SmartElectricActivity"></activity>
         <activity
@@ -151,6 +152,8 @@
         <activity android:name=".ui.home.WeibaoDetailActivity" />
         <activity android:name=".ui.home.MaxPictureActivity" />
         <activity android:name=".ui.home.MoreActivity" />
+        <activity android:name=".ui.home.LinkedServiceWebActivity"/>
+        <activity android:name=".ui.home.SmartwtaerActivity"/>
     </application>
 
 </manifest>
