--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_logo"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.SmartElectricActivity"></activity>
+        <activity android:name=".ui.home.SmartElectricActivity" />
         <activity
             android:name=".ui.main.SplashActivity"
             android:theme="@style/SplashTheme">
@@ -152,8 +152,10 @@
         <activity android:name=".ui.home.WeibaoDetailActivity" />
         <activity android:name=".ui.home.MaxPictureActivity" />
         <activity android:name=".ui.home.MoreActivity" />
-        <activity android:name=".ui.home.LinkedServiceWebActivity"/>
-        <activity android:name=".ui.home.SmartwtaerActivity"/>
+        <activity android:name=".ui.home.LinkedServiceWebActivity" />
+        <activity android:name=".ui.home.SmartwtaerActivity" />
+        <activity android:name=".ui.home.SmartElectorMonitorActivity" />
+        <activity android:name=".ui.home.SmartlectorMonitoringActivity"></activity>
     </application>
 
 </manifest>
