--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.SmartPatrolRecordActivity"></activity>
+        <activity android:name=".ui.home.SmartPatrolMapActivity"></activity>
+        <activity android:name=".ui.home.SmartPatrolRecordActivity" />
         <activity android:name=".ui.home.SmartElectricActivity" />
         <activity
             android:name=".ui.main.SplashActivity"
