--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation files('libs/xUtils-2.6.14.jar')
     implementation 'com.amap.api:location:latest.integration'
+    implementation 'com.amap.api:3dmap:latest.integration'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.zhihu.android:matisse:0.4.3'
     implementation files('libs/core-3.0.0.jar')
