--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,13 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!--百度ak-->
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="IwFWF9XAnHw0W4L62fZ1OfIRidS1QX94" >
+        </meta-data>
+        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"> </service>
+
 
         <activity android:name=".ui.home.SmartPatrolMapActivity"></activity>
         <activity android:name=".ui.home.SmartPatrolRecordActivity"
