--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-
     <application
         android:name=".common.MyApplication"
         android:allowBackup="true"
@@ -32,18 +31,22 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--百度ak-->
+
+        <!-- 百度ak -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="IwFWF9XAnHw0W4L62fZ1OfIRidS1QX94" >
-        </meta-data>
-        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"> </service>
+            android:value="IwFWF9XAnHw0W4L62fZ1OfIRidS1QX94"></meta-data>
 
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote"></service>
 
-        <activity android:name=".ui.home.SmartPatrolMapActivity"></activity>
-        <activity android:name=".ui.home.SmartPatrolRecordActivity"
-            android:windowSoftInputMode="adjustUnspecified|stateHidden"
-            android:configChanges="orientation|keyboardHidden" />
+        <activity android:name=".ui.home.SmartPatrolMapActivity" />
+        <activity
+            android:name=".ui.home.SmartPatrolRecordActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity android:name=".ui.home.SmartElectricActivity" />
         <activity
             android:name=".ui.main.SplashActivity"
@@ -170,6 +173,8 @@
         <activity android:name=".ui.home.SmartlectorMonitoringActivity" />
         <activity android:name=".ui.home.SmartlectorMonitoringDetailActivity" />
         <activity android:name=".ui.home.SmartPatrolActivity" />
+        <activity android:name=".ui.home.ScanPatrolActivity"></activity>
+        <activity android:name=".widget.zxing.android.CapturePatrolActivity"/>
     </application>
 
 </manifest>
